--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.24.0",
+    "babel-preset-react": "^6.24.1",
     "bootstrap": "^5.1.3",
     "material-table": "^1.69.3",
     "react": "^17.0.2",
