--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,14 +7,17 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
     "@mui/icons-material": "^5.2.0",
     "@mui/material": "^5.2.2",
     "@mui/styled-engine-sc": "^5.1.0",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
+    "development": "^0.0.6",
     "material-table": "^1.69.3",
     "react-bootstrap": "^2.0.3",
     "react-router-dom": "^5.2.0",
+    "serve": "^13.0.2",
     "styled-components": "^5.3.3"
   }
 }
